service deliveries added

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/ServiceDetail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/ServiceDetail.cshtml
@@ -49,5 +49,7 @@
         }
     </summary-list-row>
     <summary-list-row key="More details">a</summary-list-row>
-    <summary-list-row key="How people can use it">a</summary-list-row>
+    <summary-list-row key="How people can use it">
+        @Model.ServiceDeliveries
+    </summary-list-row>
 </summary-list>
