fix links for services and locations for la and vcs managers

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_LocationsCard.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_LocationsCard.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="card">
     <h3 class="govuk-heading-s">
-        <a asp-area="Locations" asp-page="/ManageLocations">Locations</a>
+        <a asp-page="/Manage-Locations/Index">Locations</a>
     </h3>
     <p class="govuk-body-s">Add, view, change or delete your service and family hub locations in the directory.</p>
 </div>
