--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_ServicesCard.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_ServicesCard.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="card">
     <h3 class="govuk-heading-s">
-        <a asp-page="/Manage/Services">Services</a>
+        <a asp-page="/Manage-Services/Index">Services</a>
     </h3>
     <p class="govuk-body-s">Add, view, change or delete services shown in the directory.</p>
     <p class="govuk-body-s">Services can include groups, activities, programmes and advice.</p>
