--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_AddServiceCard.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_AddServiceCard.cshtml
@@ -1,6 +1,7 @@
-﻿<div class="card">
+﻿@using FamilyHubs.ServiceDirectory.Admin.Core.Models
+<div class="card">
     <h3 class="govuk-heading-s">
-        <a>Add a service</a>
+        <a href="@ServiceJourneyPageExtensions.GetStartPageUrl()">Add a service</a>
     </h3>
     <p class="govuk-body-s">Add a service to the directory.</p>
     <p class="govuk-body-s">Services can include groups, activities, programmes and advice.</p>
