--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/index.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/index.cshtml
@@ -32,7 +32,7 @@
         </div>
 
         <a asp-page="/Welcome" class="govuk-button govuk-button--start">
-            Start now
+            Initiator now
             <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
                 <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
             </svg>
