--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/ServiceDetail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/ServiceDetail.cshtml
@@ -1,4 +1,8 @@
 ﻿@page
 @model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_services.ServiceDetailModel
-@{
-}
+
+<h1>Service details placeholder</h1>
+
+<summary-list>
+    <summary-list-row key="Name" action1="Change" action1-href="/manage-service/service-name?serviceId=@Model.ServiceId">@Model.Title</summary-list-row>
+s</summary-list>
