--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_services.ServiceDetailModel
+@model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_services.Service_DetailModel
 
 <h1>Service details placeholder</h1>
 
