--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
@@ -4,5 +4,5 @@
 <h1>Service details placeholder</h1>
 
 <summary-list>
-    <summary-list-row key="Name" action1="Change" action1-href="/manage-service/service-name?serviceId=@Model.ServiceId">@Model.Title</summary-list-row>
-s</summary-list>
+    <summary-list-row key="Name" action1="Change" action1-href="/manage-services/service-name?serviceId=@(Model.ServiceId)&flow=edit">@Model.Title</summary-list-row>
+</summary-list>
