--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/who-for.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/who-for.cshtml
@@ -30,7 +30,7 @@
                         </div>
                         <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="age-range">
                             <div class="govuk-form-group">
-                                <label class="govuk-label" for="age-range-from">
+                                <label class="govuk-label" asp-for="FromAge">
                                     From
                                 </label>
                                 <select asp-for="FromAge" asp-items="Model.Ages" class="govuk-select">
@@ -38,7 +38,7 @@
                                 </select>
                             </div>
                             <div class="govuk-form-group">
-                                <label class="govuk-label" for="age-range-to">
+                                <label class="govuk-label" asp-for="ToAge">
                                     To
                                 </label>
                                 <select asp-for="ToAge" asp-items="Model.Ages" class="govuk-select">
