edit service harness

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
@@ -4,5 +4,8 @@
 <h1>Service details placeholder</h1>
 
 <summary-list>
+    @* todo: helper for urls *@
     <summary-list-row key="Name" action1="Change" action1-href="/manage-services/service-name?serviceId=@(Model.ServiceId)&flow=edit">@Model.Title</summary-list-row>
+    <summary-list-row key="Types of support offered" action1="Change" action1-href="/manage-services/support-offered?serviceId=@(Model.ServiceId)&flow=edit">Todo</summary-list-row>
+    <summary-list-row key="For children and young people?" action1="Change" action1-href="/manage-services/who-for?serviceId=@(Model.ServiceId)&flow=edit">Todo</summary-list-row>
 </summary-list>
