--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/who-for.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/who-for.cshtml
@@ -23,8 +23,8 @@
                 <div class="govuk-form-group">
                     <div class="govuk-radios" data-module="govuk-radios">
                         <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="children" name="children" type="radio" value="Yes" aria-controls="age-range">
-                            <label class="govuk-label govuk-radios__label" for="children">
+                            <input class="govuk-radios__input" id="yes" name="children" type="radio" value="true" aria-controls="age-range">
+                            <label class="govuk-label govuk-radios__label" for="yes">
                                 Yes, they can use the service
                             </label>
                         </div>
@@ -44,8 +44,8 @@
                         </div>
 
                         <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="children-2" name="children" type="radio" value="No">
-                            <label class="govuk-label govuk-radios__label" for="children-2">
+                            <input class="govuk-radios__input" id="no" name="children" type="radio" value="false">
+                            <label class="govuk-label govuk-radios__label" for="no">
                                 No, they cannot use the service
                             </label>
                         </div>
