--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Support-Offered.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Support-Offered.cshtml
@@ -12,15 +12,16 @@
     Model.Errors.ErrorIdToHtmlElementId = _ => Model.UserInput.ErrorElementId;
 }
 
+<partial name="_ErrorSummaryNext" model="Model.Errors" />
+
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <partial name="_ErrorSummaryNext" model="Model.Errors" />
 
-        <form method="post" novalidate data-validate="my-form-validation">
+        <form method="post" novalidate>
             <h1 class="govuk-heading-l">
                 What support does the service offer?
             </h1>
-            <p>Select the categories and subcategories of support that provides. </p>
+            <p>Select the categories and subcategories of support that @Model.ServiceName provides.</p>
 
 
             <div class="govuk-form-group">
